@@ -1,3 +1,8 @@
+    - BUILDARGS should accept different signatures #36
+    - clearer create by default clear_#{attr_name}! public method
+    - add attr :private #35
+    - methods predicate, clearer and handles are no longer singleton methods #34
+
 0.0.9 - 2014-02-02
 	- support to BUILD and BUILDARGS #5 and #6
 	- support to trigger #7
